--- a/src/components/reservations/ReserveForm.css
+++ b/src/components/reservations/ReserveForm.css
@@ -3,25 +3,21 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px;
-  width: 80%;
   height: auto;
-  margin-left: 20%;
   background-color: #8fbc01;
 }
 
 .reserve-form-container h2 {
-  color: #fdfcff;
+  color: rgb(12, 72, 238);
 }
 
 .reserve-form-container p {
   font-size: 20px;
   margin: 10px 0;
-  color: #fdfcff;
+  color: #007bff;
 }
 
 .reservation-form {
-  width: 60%;
   padding: 20px;
   border: 2px solid #ccc;
   border-radius: 5px;
@@ -44,7 +40,7 @@ select {
 
 .reservation-form button {
   padding: 10px;
-  background-color: #97bf0f;
+  background-color: rgb(12, 72, 238);
   border: 1.5px solid #ccc;
   outline: none;
   color: #fff;
