--- a/src/App.css
+++ b/src/App.css
@@ -1,82 +1,45 @@
 .app {
-  display: grid;
-  grid-template-rows: inherit;
-  grid-template-columns: auto;
-
-  /* background-color: rgb(161, 55, 73); */
-  height: inherit;
+  max-width: 100%;
 }
 
-.flexV {
+#mainContainer {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
-.flexH {
-  display: flex;
+@media screen and (min-width: 600px) {
+  #mainContainer {
+    flex-direction: row;
+  }
+  
 }
 
-.logoutContainer {
-  align-items: center;
-  justify-content: center;
+.side-container {
+  padding: 2em 1em;
+  background-color: #f9fcfd;
 }
 
-.error {
-  color: white;
-  background-color: red;
-  padding: 0.5rem;
-  margin-top: 0.5rem;
-  text-align: center;
-  align-self: self-start;
-  border-radius: 16px;
+button {
+  background-color: rgb(12, 72, 238);
+  color: #fff;
+  border-radius: 5px;
+  min-width: 5em;
 }
 
-.success {
-  color: #97bf11;
+@media screen and (min-width: 600px) {
+  .side-container {
+    padding: 3em;
+    width: 70%;
+  }
 }
 
-.infoContainer {
-  flex-wrap: wrap;
-  margin-top: 8rem;
-  padding: 1rem;
-  text-align: center;
-  font-size: 20px;
-  gap: 10px;
-  justify-content: center;
-  align-items: center;
+@media screen and (min-width: 890px) {
+  .side-container {
+    width: 80%;
+  }
 }
 
-#infoLogin {
-  margin-top: 1rem;
-  text-align: center;
-}
-
-.appContainer {
-  margin-bottom: 1rem;
-  display: grid;
-  grid-template-columns: 15fr 85fr;
-  grid-template-rows: 100fr;
-}
-
-.mainContainer {
-  height: 100vh;
-}
-
-.messageContainer {
-  margin-top: 4rem;
-  margin-left: 1%;
-  justify-content: center;
-  align-items: center;
-  padding: 0.5rem;
-  width: fit-content;
-  background-color: rgb(64, 92, 64);
-  border-radius: 20px;
-}
-
-.messageContainer .content {
-  padding: 0.3rem;
-  color: white;
-}
 
 .hamburguerContainer {
   position: fixed;
@@ -101,8 +64,4 @@
     justify-content: center;
     align-items: center;
   }
-
-  /* .controlVisibility {
-    display: block;
-  } */
 }
