--- a/src/components/delete/Delete.css
+++ b/src/components/delete/Delete.css
@@ -1,9 +1,3 @@
-.delete-container {
-  width: 80%;
-  height: auto;
-  margin-left: 20%;
-}
-
 .delete-container h2 {
   text-align: center;
   margin: 15px 0;
@@ -17,12 +11,17 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 2px solid #97bf0f;
+  border: 2px solid rgb(126, 157, 245);
   padding: 12px;
   border-radius: 7px;
   margin: 12px 0;
   background-color: #fffb;
   margin-bottom: 10px;
+}
+
+.delete-card:hover {
+  background-color: #f0f0f0;
+  box-shadow: 0 0 10px rgba(190, 190, 190, 0.1);
 }
 
 .delete-card p {
