--- a/src/components/details/Details.css
+++ b/src/components/details/Details.css
@@ -1,16 +1,9 @@
-.details-container {
-  width: 80%;
-  height: 100vh;
-  margin-left: 20%;
-}
-
 .details-container h2 {
   text-align: center;
   margin: 15px 0;
 }
 
 .details-div {
-  width: 70%;
   margin: 0 auto;
 }
 
@@ -32,7 +25,7 @@
   font-size: 20px;
   margin-top: 15px;
   padding: 10px 12px;
-  background-color: #97bf0f;
+  background-color: rgb(12, 72, 238);
   color: #fff;
   border: none;
   border-radius: 5px;
