--- a/src/components/main/MotorcycleList.css
+++ b/src/components/main/MotorcycleList.css
@@ -1,11 +1,3 @@
-.motorcycle-list-container {
-  width: 80%;
-  height: 100vh;
-  margin-left: 20%;
-  background-color: #fff;
-  color: #363636;
-}
-
 .carousel-container {
   width: 100%;
   height: 100%;
@@ -17,7 +9,7 @@
 .carousel-arrow {
   font-size: 50px;
   cursor: pointer;
-  color: #97bf0f;
+  color: rgb(12, 72, 238);
 }
 
 .carousel-arrow:hover {
@@ -40,10 +32,15 @@
 .motorcycle-item {
   width: 30%;
   height: auto;
-  border: 1.5px solid #97bf0f;
+  border: 2px solid rgb(126, 157, 245);
   border-radius: 10px;
   padding: 10px;
   text-align: center;
+}
+
+.motorcycle-item:hover {
+  background-color: #f0f0f0;
+  box-shadow: 0 0 10px rgba(190, 190, 190, 0.1);
 }
 
 .motorcycle-name {
